--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,22 +1,31 @@
-<%= form_with(model: @user, local: true) do |f| %>
- 
-    <div class="form-group">
-      <%= f.label :username %><br/>
-      <%= f.text_field :username, class: "form-control" %>
-    </div>
-     
-    <div class="form-group">
-      <%= f.label :email %><br/>
-      <%= f.email_field :email, class: "form-control" %>
-    </div>
-     
-    <div class="form-group">
-      <%= f.label :password %><br/>
-      <%= f.password_field :password, class: "form-control" %>
-    </div>
-     
-    <div class="form-group">
-      <%= f.submit %>
-    </div>
-     
-    <% end %>
+<div class = "container"
+    <form>
+        <%= form_with(model: @user, local: true) do |f| %>
+    
+            <div class="col-sm-3">
+                <%= f.label :Firstname , class: "form-label" %><br/>
+                <%= f.text_field :firstname, class: "form-control" %>
+            </div>
+            <div class= "col-sm-3">
+                <%= f.label :Surname %><br/>
+                <%= f.text_field :surname, class: "form-control" %>
+            </div>
+            
+            <div class="col-sm-3">
+                <%= f.label :email %><br/>
+                <%= f.email_field :email, class: "form-control" %>
+            </div>
+            
+            <div class="col-sm-3">
+                <%= f.label :password %><br/>
+                <%= f.password_field :password, class: "form-control" %>
+            </div>
+            
+            <div class="col-sm-3">
+                <%= f.submit %>
+            </div>
+            
+        <% end %>
+    </form>
+</div>
+
