name only appears if there is a session started and curent user is true

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,5 +1,8 @@
 <h2> this the home page </h2>
 
-<%= current_user.firstname %>
+<% if current_user %>
+
+    <%= current_user.firstname %>
+<% end %>
 
 
