logout only visible once the a session is started - meaning  a registered user has logged in

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,8 +21,10 @@
   </head>
 
   <body>
-  
- <h4><%= link_to 'Logout',  logout_path, method: :delete %><h4>
+
+    <% if current_user %>
+      <h4><%= link_to 'Logout',  logout_path, method: :delete %><h4>
+    <% end %>
  
   
     <% flash.each do |name, msg| %>
