--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,37 +6,47 @@
     </ul>
 </div>
 
-<div class = "container"
-    <form>
-        <%= form_with(model: @user, local: true) do |f| %>
-    
-            <div class="col-sm-3 ">
-                <%= f.label :Firstname , class: "form-label" %><br/>
-                <%= f.text_field :firstname, class: "form-control" %>
-            </div>
-            <div class= "col-sm-3">
-                <%= f.label :Surname %><br/>
-                <%= f.text_field :surname, class: "form-control" %>
-            </div>
-            
-            <div class="col-sm-3">
-                <%= f.label :email %><br/>
-                <%= f.email_field :email, class: "form-control" %>
-            </div>
-            
-            <div class="col-sm-3">
-                <%= f.label :password %><br/>
-                <%= f.password_field :password, class: "form-control" %>
-            </div>
-            <div class="col-sm-3"
-                <%= f.label :password %><br/>
-                <%= password_field :user, :password_confirmation, class: "form-control" %>
-            </div>
-            <div class="col-sm-3">
-                <%= f.submit %>
-            </div>
-            
-        <% end %>
-    </form>
+<div class = "container">
+    <div class="d-flex justify-content-center">
+            <%= form_with(model: @user, local: true) do |f| %>
+                <div class="mb-3">
+                    <div class="row g-2">
+                    
+                        <div class="col col-lg-6">
+                            <%= f.label :Firstname , class: "form-label" %>
+                            <%= f.text_field :firstname, class: "form-control" %>
+                        </div>
+                        <div class= "col col-lg-6">
+                            <%= f.label :Surname , class: "form-label"%>
+                            <%= f.text_field :surname, class: "form-control" %>
+                        </div>
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <div class="col col-lg-12">
+                        <%= f.label :email %><br/>
+                        <%= f.email_field :email, class: "form-control" %>
+                    </div>
+                </div>
+
+                <div class="mb-3">
+                    <div class="row g-2">
+                        <div class="col col-lg-6">
+                            <%= f.label :password %><br/>
+                            <%= f.password_field :password, class: "form-control" %>
+                        </div>
+                        <div class="col col-lg-6"
+                            <label for="Password-confirmation">Password confirmation</label> 
+                            <%= password_field :user, :password_confirmation, class: "form-control" %>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <%= f.submit "Sign-Up", class: "btn btn-primary" %>
+
+                </div>
+                
+            <% end %>
+    </div>
 </div>
 
