--- a/app/assets/stylesheets/new.css
+++ b/app/assets/stylesheets/new.css
@@ -1,6 +1,14 @@
 .container {
-    position: absolute;
+    position: fixed;
     top: 50%;  
     left: 50%; 
     transform: translate(-50%, -50%);
 }
+
+h3 {
+    text-align: center;
+    position: fixed;
+    left: 45%;
+    padding-top: 5%;
+}
+
