--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RubyProj</title>
+    <title>Hotel Inn</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -15,18 +15,48 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_link_tag 'new', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_link_tag 'index', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag "application"%>
+
 
 
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+      <nav class="navbar navbar-expand-lg navbar navbar-light">
+        <div class="container-fluid">
+          <a <%= link_to 'Hotel Inn', homes_path, class: 'navbar-brand' %></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a <%= link_to 'Booking', homes_path, class: 'nav-link active'  %></a>
+              </li>
+              <li class="nav-item">
+                <a <%= link_to 'Events', homes_path, class: 'nav-link active'  %></a>
+              </li>
+              <li class="nav-item">
+                <a <%= link_to 'About Us', homes_path, class: 'nav-link active'  %></a>
+              </li>
+            </ul>
+          </div>
+          <div class="nav-item">
+            <% if current_user %>
+              <%= link_to 'Logout',  logout_path, method: :delete, class: 'nav-link active' %> 
+              <p id = "current-user"> Hi <%= current_user.firstname %></p>
+          <% else  %>
+            
+          <%= link_to 'Login',  login_path %>
+          or
+          <%= link_to ' Sign-up',  signup_path %>
 
-    <% if current_user %>
-      <h4><%= link_to 'Logout',  logout_path, method: :delete %><h4>
-    <% end %>
- 
-  
+          <% end %>
+          </div>
+        </div>
+      </nav>
+
     <% flash.each do |name, msg| %>
       <div class="alert alert-<%= name%>">
         <%= msg %>
