--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,14 @@
+<%= stylesheet_link_tag "new"%>
+
 <div id="error_explanation">
     <ul>
         <% @user.errors.full_messages.each do |error| %>
-            <li> * <%= error %></li> 
+            <li> <%= error %></li> 
         <% end %>
     </ul>
 </div>
+
+<h3> Sign up here </h3>
 
 <div class = "container">
     <div class="d-flex justify-content-center">
@@ -32,7 +36,7 @@
                 <div class="mb-3">
                     <div class="row g-2">
                         <div class="col col-lg-6">
-                            <%= f.label :password %><br/>
+                            <%= f.label :password %>
                             <%= f.password_field :password, class: "form-control" %>
                         </div>
                         <div class="col col-lg-6"
