--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,8 @@
  *= require_self
  */
 
+ *= require bootstrap-datepicker3
+ 
 .navbar{
     background-color: #e3f2fd;
     color: black;
@@ -24,6 +26,5 @@
     float: right;
     position: relative;
     right: 10%;
-
-
 }
+
