--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,3 +1,12 @@
+<%= image_tag "night.jpeg", class: "homepage-pic" %>  
+
+
+<div class = "container">
+    <p class="lead ">
+        "Travel Good with Hotel Inn"
+    </p>
+</div>
+
 
 
 
