importign bootstrap and putting in require file

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,9 +12,13 @@
  *
  *= require_tree .
  *= require_self
+  *= require bootstrap-datepicker
+
  */
 
- *= require bootstrap-datepicker3
+ @import "bootstrap";
+
+
  
 .navbar{
     background-color: #e3f2fd;
