adding input value in

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,4 +1,11 @@
 
-<input type="text" data-provide='datepicker' >
+<input type="text" class ='datepicker' >
+
+<h1>sdfghjk</h1>
 
 
+
+
+
+    
+   
