--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,14 +1,11 @@
 
 <div class="card w-75">
-<% @bookings.each do |room| %>
-  <div class="card-body">
-    <h5 class="card-title"><%= room.name %> </h5>
-    <a href="#" class="btn btn-primary">Book Room</a>
-
-  </div>
-
+  <% @bookings.each do |booking| %>
+    <div class="card-body">
+      <h5 class="card-title"><%= booking.check_out.to_date.strftime("%d/%m/%y") %> </h5>
+    </div>
   <%end%>
-
 </div>
 
 
+<%= params.inspect %>
