--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,11 +1,37 @@
 
-<input type="text" class ='datepicker' >
+<div class = "container">
 
-<h1>sdfghjk</h1>
+</div>
+
+    Check-out: <input type="text"  class='datepicker'>
+    Check-In: <input type="text"  class='datepicker'> 
 
 
 
+<div class="create">
+<div class="container">
+  <%= form_with model: @booking do |form| %> 
+    <div class="row g-2">
+      <div class="col-md-6"
+        <div class="mb-3">
+          <%= form.label :guests %>
+          <%= form.text_field :guests, class: "form-control form-control-sm" %> <br> 
+          <%= form.label :check_in %>
+          <%= form.text_field :check_in, class: "datepicker", rows: "6" %> <br> 
+          <%= form.label :check_out %>
+          <%= form.text_field :check_out, class: "datepicker", rows: "6" %> <br> 
+          <%= form.label :room_id %>
+          <%= form.text_field :room_id, rows: "6" %> <br> 
+        
+        </div>
+      </div> 
+      <div class= "col-sm-9 ms-auto text-center" ">
+        <%= form.submit "Submit", class: " btn btn-secondary btn-sm" %>
+      </div>
+    </div>
+  <% end %> 
+</div>
+</div>
+      
 
 
-    
-   
