--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -3,9 +3,10 @@
 
 <div class = "container">
     <p class="lead ">
-        "Travel Good with Hotel Inn"
+        "Travel Good with Nims Inn"
     </p>
 </div>
+
 
 
 
