--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -3,9 +3,10 @@
   <% @bookings.each do |booking| %>
     <div class="card-body">
       <h5 class="card-title"><%= booking.check_out.to_date.strftime("%d/%m/%y") %> </h5>
+      <h5 class="card-title"><%= booking.user_id %> </h5>
+
     </div>
   <%end%>
 </div>
 
 
-<%= params.inspect %>
