testing out whether i can get the room , user and booking info in the show

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -2,16 +2,13 @@
   
     <div class="card-body">
      
-      <%= params.inspect %>
+        <%=@bookings.id%>
+        <%=@room.name%>
 
-      <% @user.bookings.each do |b| %>
-        <%= b.id %>
-    
-      <% end %>
-      <%=@user.firstname%>
+
+        <%=@user.firstname%>
     </div>
 
-   <%= @bookings.check_in %>
    
     
 
