able to fetch room name, booking details and user info in show

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,17 +1,13 @@
-<div class="card w-75">
-  
-    <div class="card-body">
-     
-        <%=@bookings.id%>
-        <%=@room.name%>
+<div class="container">
+    <p> Thank you for booking with us! :) </p>
 
-
-        <%=@user.firstname%>
-    </div>
-
+    <%=@bookings.id%>
+    <%=@user.firstname%>
+    
+    <%=@room.name%>
+</div>
    
     
 
-    </div>
 
-</div>
+
