attempting to do room availbility functionaility

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -7,6 +7,25 @@
 </div>
 
 
+<%= form_with url: "/rooms", method: :get do |form| %>
+    
+    <div class="row g-2">
+      <div class="col-md-6"
+        <div class="mb-3">
+          <%= form.label :check_in %>
+          <%= form.text_field :check_in, class: "datepicker", rows: "6" %> <br> 
+          <%= form.label :check_out %>
+          <%= form.text_field :check_out, class: "datepicker", rows: "6" %> <br> 
+        </div>
+      </div> 
+      <div class= "col-sm-9 ms-auto text-center" ">
+        <%= form.submit "Submit", class: " btn btn-secondary btn-sm" %>
+      </div>
+    </div>
+  <% end %> 
+
+
+
 
 
 
