--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -6,6 +6,7 @@
     <%=@user.firstname%>
     <%=@room.name%>
     <a class="dropdown-item"><%= link_to"Delete", room_booking_path("#{params[:room_id]}","#{params[:id]}"), method: :delete, data:{confirm: 'Are you sure you wish to delete this booking?'}, class: 'btn btn-dark btn-sm ' %></a>
+    <a class="dropdown-item"><%= link_to "Edit", edit_room_booking_path("#{params[:room_id]}","#{params[:id]}"), class: 'btn btn-dark btn-sm '%></a>
 
 
 </div>
