--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -1,25 +1,7 @@
 <h2> Edit page </h2>
 
 <div class="create">
-
-<div class="create">
-<div class="container">
-  <%= form_with model: [@room, @booking] do |form| %> 
-    <div class="row g-2">
-      <div class="col-md-6"
-        <div class="mb-3"> 
-          <%= form.label :check_in %>
-          <%= form.text_field :check_in, class: "datepicker", rows: "6" %> <br> 
-          <%= form.label :check_out %>
-          <%= form.text_field :check_out, class: "datepicker", rows: "6" %> <br> 
-        </div>
-      </div> 
-      <div class= "col-sm-9 ms-auto text-center" ">
-        <%= form.submit "Submit", class: " btn btn-secondary btn-sm" %>
-      </div>
-    </div>
-  <% end %> 
-</div>
+  <%= render "form", post: @booking %>
 </div>
     		
 
