--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,10 +1,13 @@
 <div class="container">
-    <p> Thank you for booking with us! :) </p>
+    <p> Booking Details </p>
 
 
     <%=@booking%>
-    <%=@user.firstname%>
+    <%=@user.firstname%> 
     <%=@room.name%>
+    <h5 class="card-title"> Booking for: <%= (@bookings.check_out - @bookings.check_in).to_i %> days</h5>
+    <h5 class="card-title">Check in: <%= @bookings.check_in.to_date.strftime("%d/%m/%y") %> </h5>
+    <h5 class="card-title">Check out: <%= @bookings.check_out.to_date.strftime("%d/%m/%y") %> </h5>
     <a class="dropdown-item"><%= link_to"Delete", room_booking_path("#{params[:room_id]}","#{params[:id]}"), method: :delete, data:{confirm: 'Are you sure you wish to delete this booking?'}, class: 'btn btn-dark btn-sm ' %></a>
     <a class="dropdown-item"><%= link_to "Edit", edit_room_booking_path("#{params[:room_id]}","#{params[:id]}"), class: 'btn btn-dark btn-sm '%></a>
 
