--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,11 +1,24 @@
+<%= image_tag "room.jpeg", class: "homepage-pic" %>  
+
+
 <% @roomsAvailable.each do |p| %>     
-    <p><%= p.name %></p>  
-    <%= link_to "View Room ", room_path(p) %>
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title"><%= p.name %></h5>
+                    <p class="card-text">capacity<%= p.capacity %></p>
+                    <%= link_to "View Room ", room_path(p), class: "btn btn-dark"%>
+                </div>
+            </div>
+        </div>
+    </div>
 <% end %>  
 
 
-<%= @bookings.inspect%>
 
+ 
+ 
  
 
 
