--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -4,8 +4,6 @@
     <p class="lead ">
         "Travel Good with Nims Inn"
     </p>
-</div>
-
 <%= form_with url: "/rooms", method: :get do |form| %> 
   <div class="row g-2">
     <div class="col-md-6"
@@ -17,7 +15,7 @@
       </div>
     </div> 
     <div class= "col-sm-9 ms-auto text-center" ">
-      <%= form.submit "Submit", class: " btn btn-secondary btn-sm" %>
+      <%= form.submit "Search", class: " btn btn-secondary btn-sm" %>
     </div>
   </div>
 <% end %> 
