updated navbar with the right links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,13 +38,10 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a <%= link_to 'Booking', homes_path, class: 'nav-link active'  %></a>
+                <a <%= link_to 'Booking', bookings_path, class: 'nav-link active'  %></a>
               </li>
               <li class="nav-item">
-                <a <%= link_to 'Events', homes_path, class: 'nav-link active'  %></a>
-              </li>
-              <li class="nav-item">
-                <a <%= link_to 'About Us', homes_path, class: 'nav-link active'  %></a>
+                <a <%= link_to 'Rooms', rooms_path, class: 'nav-link active'  %></a>
               </li>
             </ul>
           </div>
