--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,19 +1,19 @@
 <%= image_tag "room.jpeg", class: "homepage-pic" %>  
-<% @roomsAvailable.each do |p| %>     
-    <div class="row">
+<div class="row">
+    <% @roomsAvailable.each do |p| %>     
         <div class="col-sm-4"><br>
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title"><%= p.name %></h5>
                     <p class="card-text"><%="Capacity: #{p.capacity}"%></p>
                     <p class="card-text"><%= "Cost per Night: £#{p.cost}"%></p>
-                    <%= link_to "View Room ", new_room_booking_path(p), class: "btn btn-dark"%>
+                    <%= link_to "View Room ", new_room_booking_path(p), id: "index-room", class: "btn btn-dark"%>
                 </div>
             </div>
             <br>
         </div>
-    </div>
-<% end %>  
+     <% end %>  
+</div>
 
 
 
