--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,23 +1,27 @@
 <div class="booking-form">
-    <div class="container">
     <%= form_with model: [@room, @booking] do |form| %> 
-        <div class="row g-2">
-        <div class="col-md-6"
-            <div class="mb-3">
-            <%= form.label :guests %>
-            <%= form.text_field :guests, class: "form-control form-control-sm" %> <br> 
-            <%= form.label :check_in %>
-            <%= form.text_field :check_in, class: "datepicker", rows: "6" %> <br> 
-            <%= form.label :check_out %>
-            <%= form.text_field :check_out, class: "datepicker", rows: "6" %> <br> 
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="mb-3">
+                    <%= form.label :guests, class: "text-box"%>
+                    <%= form.text_field :guests, class: "form-control form-control-sm" %> <br> 
+                </div>
             </div>
-        </div> 
-        <div class= "col-sm-9 ms-auto text-center" ">
-            <%= form.submit "Submit", class: " btn btn-secondary btn-sm" %>
         </div>
+        <div class="row">
+            <div class="col-sm-2">
+                <%= form.label :check_in %>
+                <%= form.text_field :check_in, class: "datepicker", rows: "6" %> <br> 
+            </div>
+            <div class="col-sm-2">
+                <%= form.label :check_out %>
+                <%= form.text_field :check_out, class: "datepicker", rows: "6" %> <br> 
+            </div>
+            <div class= "col-sm-2">
+                <%= form.submit "Book", id: "booking-btn", class: " btn btn-secondary btn-sm" %>
+            </div>
         </div>
-    <% end %> 
-    </div>
+    <% end %>   
 </div>
       
 
