--- a/app/assets/stylesheets/new.css
+++ b/app/assets/stylesheets/new.css
@@ -11,4 +11,28 @@ h3 {
     left: 45%;
     padding-top: 5%;
 }
+.room-pic{
+    width: 500px;
+    height: 400px;
+    padding: 15px;
+    position: relative;
+    bottom: 400px;
+    margin: 10px;
+    
+}
 
+.room-info{
+    position: relative;
+    left: 700px;
+    top: 120px;
+}
+
+.booking{
+    margin-top: 40px;
+}
+
+#booking-btn{
+    position: relative;
+    top:20px;
+    
+}
