styling the title

--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -1,6 +1,7 @@
-<h2> Edit page </h2>
-
-<div class="create">
+<div class="title text-center">
+    <h1 class="display-4"> Edit Booking </h1>
+</div>
+<div class="edit-booking">
   <%= render "form", post: @booking %>
 </div>
     		
