styling title and adding table bootsrap

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,14 +1,25 @@
-<div class="card w-75">
-    <% @sorted.each do |booking| %>
-      <div class="card-body">
-        <h5 class="card-title">Booking id: <%= booking.id %> </h5>
-      
-        <h5 class="card-title"><%= booking.room.name %> </h5>
-        <h5 class="card-title"><%= booking.user.firstname %> </h5>
-
-      <a><%= link_to"View Booking",room_booking_path(booking.room_id, booking.id), class: 'btn btn-dark btn-sm ' %></a>
-      </div>
-      
-    <%end%>
+<div class="title text-center">
+    <h1 class="display-4"> Customer Bookings </h1>
 </div>
-
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th scope="col">Booking ID</th>
+      <th scope="col">Room Name</th>
+      <th scope="col">Check In</th>
+      <th scope="col">Check Out</th>
+      <th scope="col">View</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @sorted.each do |booking| %>
+      <tr>
+        <th scope="row">Booking id: <%= booking.id %></th>
+        <td><%= booking.room.name %></td>
+        <td><%= booking.check_in.to_date.strftime("%d/%m/%y") %></td>
+        <td><%= booking.check_out.to_date.strftime("%d/%m/%y") %></td>
+        <td><%= link_to"View Booking",room_booking_path(booking.room_id, booking.id), class: 'btn btn-dark btn-sm ', id: 'view-btn' %></td> 
+      </tr>
+    <%end%>
+  </tbody>
+</table>
