--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,17 +1,29 @@
-<div class="container">
-    <p> Booking Details </p>
-    <%="Booking Number: #{@bookings.id}"%> <br>
-    <%="Customer name: #{@user.firstname}"%> <br>
-    <%="Room: #{@room.name}"%>
-    
-    <h5 class="card-title"><%="Booking for: #{@no_of_days}" %> days</h5>
-    <h5 class="card-title"><%= "Check in: #{@bookings.check_in.to_date.strftime("%d/%m/%y")}" %> </h5>
-    <h5 class="card-title"><%= "Check out: #{@bookings.check_out.to_date.strftime("%d/%m/%y")}" %> </h5>
-    <h5 class="card-title"><%= "Total: £#{@room.cost * @no_of_days }" %> </h5>
-    <a class="dropdown-item"><%= link_to"Delete", room_booking_path("#{params[:room_id]}","#{params[:id]}"), method: :delete, data:{confirm: 'Are you sure you wish to delete this booking?'}, class: 'btn btn-dark btn-sm ' %></a>
-    <a class="dropdown-item"><%= link_to "Edit", edit_room_booking_path("#{params[:room_id]}","#{params[:id]}"), class: 'btn btn-dark btn-sm '%></a>
+<div class="title text-center">
+    <h1 class="display-4"> Booking Details </h1>
 </div>
+<div class="container">
+
+    <div class="card text-center">
+    <div class="card-header">
+        <%="Booking Number: #{@bookings.id}"%>
+    </div>
+    <div class="card-body">
+        <h5 class="card-title"><%="Room: #{@room.name}"%></h5>
+        <p class="card-text"><%="Customer name: #{@user.firstname} #{@user.surname}"%></p>
+        <p class="card-text"><%="#{@room.bed_no} #{@room.bed_type} Beds"%></p>
+        <p class="card-text"><%="Number of guests: #{@bookings.guests}"%></p>
+        <p class="card-text"><%="Check in: #{@bookings.check_in.to_date.strftime("%d/%m/%y")}"%></p>
+        <p class="card-text"><%="Check out: #{@bookings.check_out.to_date.strftime("%d/%m/%y")}"%></p>
+        <p class="card-text"><%="Total: £#{@room.cost * @no_of_days }"%></p>
+
+        <%= link_to"Delete", room_booking_path("#{params[:room_id]}","#{params[:id]}"), method: :delete, data:{confirm: 'Are you sure you wish to delete this booking?'}, class: 'btn btn-dark btn-sm', id: 'delete-btn'%></a>
+        <%= link_to "Edit", edit_room_booking_path("#{params[:room_id]}","#{params[:id]}"), class: 'btn btn-dark btn-sm', id: 'edit-btn'%></a>
+        </div>
+    </div>
+</div>
+
    
+
     
 
 
