--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,4 +1,4 @@
-<div class="title">
+<div class="home-title">
   <%= image_tag "night.jpeg", class: "homepage-pic"%>  
   <p class="lead "> "Travel Good with Nims Inn"</p>
 </div>
