--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,52 +19,44 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_link_tag 'new', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_link_tag 'index', media: 'all', 'data-turbolinks-track': 'reload' %>
-
-    
     <%= stylesheet_link_tag "application"%>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-
-
+    
   </head>
-
   <body>
-      <nav class="navbar navbar-expand-lg navbar navbar-light">
-        <div class="container-fluid">
-          <a <%= link_to 'Nims Inn', homes_path, class: 'navbar-brand' %></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a <%= link_to 'Booking', bookings_path, class: 'nav-link active'  %></a>
-              </li>
-              <li class="nav-item">
-                <a <%= link_to 'Rooms', rooms_path, class: 'nav-link active'  %></a>
-              </li>
-            </ul>
-          </div>
-          <div class="nav-item">
-            <% if current_user %>
-              <%= link_to 'Logout',  logout_path, method: :delete, class: 'nav-link active' %> 
-              <p id = "current-user"> Hi <%= current_user.firstname %></p>
-          <% else  %>
-            
-          <%= link_to 'Login',  login_path %>
-          or
-          <%= link_to ' Sign-up',  signup_path %>
-
-          <% end %>
-          </div>
+    <nav class="navbar navbar-expand-lg navbar navbar-light">
+      <div class="container-fluid">
+        <a <%= link_to 'Nims Inn', homes_path, class: 'navbar-brand' %></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a <%= link_to 'Booking',bookings_path, class: 'nav-link active'  %></a>
+            </li>
+            <li class="nav-item">
+              <a <%= link_to 'Rooms',rooms_path, class: 'nav-link active'  %></a>
+            </li>
+          </ul>
         </div>
-      </nav>
+        <div class="nav-item">
+          <% if current_user %>
+            <%= link_to 'Logout',logout_path, method: :delete, class: 'nav-link active' %> 
+            <p id = "current-user"> Hi <%= current_user.firstname %></p>
+          <%else%>
+            <%= link_to 'Login',  login_path %> or
+            <%= link_to ' Sign-up',  signup_path %>
+          <%end%>
+        </div>
+      </div>
+    </nav>
 
     <% flash.each do |name, msg| %>
-      <div class="alert alert-<%= name%>">
-        <%= msg %>
+      <div class="alert alert-<%=name%>">
+        <%=msg%>
       </div>
-    <% end %>
-
+    <%end%>
     <%= yield %>
   </body>
 </html>
