getting rid of extra error message since already contained error message in controller

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,14 +1,7 @@
 <%= stylesheet_link_tag "new"%>
-
-<div id="error_explanation">
-    <ul>
-        <% @user.errors.full_messages.each do |error| %>
-            <li> <%= error %></li> 
-        <% end %>
-    </ul>
+<div class="title text-center">
+    <h1 class="display-4"> Sign Up </h1>
 </div>
-
-<h3> Sign up here </h3>
 
 <div class = "container">
     <div class="d-flex justify-content-center">
