changing @user to current user

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,5 +1,5 @@
 <div class="title text-center">
-    <h1 class="display-4"> Booking Details </h1>
+    <h1 class="display-4"> Booking Confirmation </h1>
 </div>
 <div class="container">
 
