--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar navbar-light">
       <div class="container-fluid">
-        <a <%= link_to 'Nims Inn', homes_path, class: 'navbar-brand' %></a>
+        <a <%= link_to 'Nims Inn', root_path, class: 'navbar-brand' %></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -36,9 +36,6 @@
               <% if current_user %>
                 <a <%= link_to 'Booking',bookings_path, class: 'nav-link active'  %></a>
               <%end%>
-            </li>
-            <li class="nav-item">
-              <a <%= link_to 'Rooms',rooms_path, class: 'nav-link active'  %></a>
             </li>
           </ul>
         </div>
