--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -3,7 +3,7 @@
   <p class="lead "> "Travel Good with Nims Inn"</p>
 </div>
 <%=form_with url: "/rooms", method: :get do |form|%> 
-  <nav class="navbar navbar-expand-lg navbar style="background-color: #e3f2fd;">
+  <nav class="navbar navbar-expand-lg navbar ">
     <div class="container-fluid">
       <span class="navbar-brand" >
         <div class="row g-2">
