--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -39,8 +39,7 @@
                     </div>
                 </div>
                 <div class="col-sm-3">
-                    <%= f.submit "Sign-Up", class: "btn btn-primary" %>
-
+                    <%= f.submit "Sign-Up", class: "user-btn btn btn-secondary" %>
                 </div>
                 
             <% end %>
