--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,7 +1,7 @@
 <div class="title text-center">
     <h1 class="display-4"> Customer Bookings </h1>
 </div>
-<table class="table table-hover">
+<table class="table table-hover justify-content-center">
   <thead>
     <tr>
       <th scope="col">Booking ID</th>
